# GPS-plane-unit

./: README.md  controller_pin_config.txt
calibrate/: calibrate.ino
datalogs/: datalog1_05-23-18.txt
firmware/: Firmware.ino  firmware.ino
fpc/firmware/: firmware.ino
plotter/: index.html
plotter/css/: main.css
simulation/: abstract_algorithm.txt  gazebo_research.txt  inertial_converson_helper.html  north_side.world  run_gazebo.sh
simulation/rc_receiver_serial_communication/: rc_receiver_serial_communication.ino
simulation/wp_loader_plugin/src/: CMakeLists.txt  wp_loader_plugin.cpp
